# TakeImageFromVideo

./: README.md
TakeImageFromVideo/: CMakeLists.txt  main.cpp  videoName.txt  videoPath.txt
